# histo_altloc_cleaner

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
docs/: PLAN.md
skills/histo-altloc-cleaner/: SKILL.md
src/histo_altloc_cleaner/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
