[project]
name = "histo-altloc-cleaner"
version = "0.1.0"
description = "Split a structure file with ALTLOC records into one complete structure file per alternate conformation."
readme = "README.md"
authors = [
    { name = "Chris Thorpe", email = "33100149+drchristhorpe@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "biopython>=1.85",
    "click>=8.1",
    "rich>=13.7",
]

[project.scripts]
histo-altloc-cleaner = "histo_altloc_cleaner.cli:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
]
